out
       Fresh unicode-xid v0.0.4
       Fresh error-chain v0.10.0
       Fresh libc v0.2.29
       Fresh void v1.0.2
       Fresh utf8-ranges v1.0.0
       Fresh regex-syntax v0.4.1
       Fresh quote v0.3.15
       Fresh lazy_static v0.2.8
       Fresh byteorder v1.1.0
       Fresh synom v0.11.3
       Fresh memchr v1.0.1
       Fresh unreachable v1.0.0
       Fresh syn v0.11.11
       Fresh aho-corasick v0.6.3
       Fresh thread_local v0.3.4
       Fresh pq-sys v0.4.4
       Fresh derive-error-chain v0.10.1
       Fresh regex v0.2.2
       Fresh diesel v0.15.2
       Fresh dotenv v0.9.0
       Fresh dotenv v0.10.1
       Fresh diesel_infer_schema v0.15.0
       Fresh diesel_codegen v0.15.0
   Compiling diesel_demo v0.1.0 (file:///home/kebrock/diesel_demo)
     Running `rustc --crate-name diesel_demo src/lib.rs --crate-type lib --emit=dep-info,link -C debuginfo=2 -C metadata=94c1b24b85c08e4c -C extra-filename=-94c1b24b85c08e4c --out-dir /home/kebrock/diesel_demo/target/debug/deps -L dependency=/home/kebrock/diesel_demo/target/debug/deps --extern diesel=/home/kebrock/diesel_demo/target/debug/deps/libdiesel-331c4c811c043e97.rlib --extern dotenv=/home/kebrock/diesel_demo/target/debug/deps/libdotenv-844f17350e551a0a.rlib --extern diesel_codegen=/home/kebrock/diesel_demo/target/debug/deps/libdiesel_codegen-2af64cf18fca60ab.so -L native=/usr/lib/x86_64-linux-gnu`
error[E0412]: cannot find type `PgConnection` in this scope
  --> src/lib.rs:12:34
   |
12 | pub fn establish_connection() -> PgConnection {
   |                                  ^^^^^^^^^^^^ did you mean `Connection`?
   |
help: possible candidate is found in another module, you can import it into scope
   |
1  | use diesel::pg::PgConnection;
   |

error[E0433]: failed to resolve. Use of undeclared type or module `PgConnection`
  --> src/lib.rs:17:5
   |
17 |     PgConnection::establish(&database_url)
   |     ^^^^^^^^^^^^ Use of undeclared type or module `PgConnection`

warning: unused import: `diesel::prelude::*;`
 --> src/lib.rs:8:5
  |
8 | use diesel::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: #[warn(unused_imports)] on by default

error: aborting due to 2 previous errors

error: Could not compile `diesel_demo`.

Caused by:
  process didn't exit successfully: `rustc --crate-name diesel_demo src/lib.rs --crate-type lib --emit=dep-info,link -C debuginfo=2 -C metadata=94c1b24b85c08e4c -C extra-filename=-94c1b24b85c08e4c --out-dir /home/kebrock/diesel_demo/target/debug/deps -L dependency=/home/kebrock/diesel_demo/target/debug/deps --extern diesel=/home/kebrock/diesel_demo/target/debug/deps/libdiesel-331c4c811c043e97.rlib --extern dotenv=/home/kebrock/diesel_demo/target/debug/deps/libdotenv-844f17350e551a0a.rlib --extern diesel_codegen=/home/kebrock/diesel_demo/target/debug/deps/libdiesel_codegen-2af64cf18fca60ab.so -L native=/usr/lib/x86_64-linux-gnu` (exit code: 101)
